# minidata

./: COPYING.txt  Cargo.toml
src/: image.rs  lib.rs  utils.rs
src/datasets/: apollo.rs  cifar10.rs  cityscapes.rs  imagenet.rs  lmdb.rs  mnist.rs  mod.rs  npy.rs
tools/: inspect-imagenet.rs
