[package]
name = "superdata"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[features]
mpi = ["mpich"]

[lib]
name = "superdata"
path = "src/lib.rs"

[dependencies]
byteorder = "*"
colorimage = { path = "../colorimage" }
extar = { path = "../extar" }
mpich = { path = "../libmpich", optional = true }
rand = "^0.5"
sharedmem = { path = "../sharedmem" }
string_cache = "*"
time = "*"
