[package]
name = "superdata"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[features]
mpi = ["mpich"]
#shmem = ["cray_shmem"]

[lib]
name = "superdata"
path = "src/lib.rs"

[dependencies]
byteorder = "*"
colorimage = { path = "../colorimage" }
#cray_shmem = { path = "../cray_shmem", optional = true }
extar = { path = "../extar" }
lmdb = "*"
memarray = { path = "../memarray" }
mpich = { path = "../libmpich", optional = true }
rand = "^0.5"
sharedmem = { path = "../sharedmem" }
string_cache = "*"
time = "*"
